@@ -16,11 +16,7 @@ Build-Depends: debhelper (>= 9),
                qtbase5-private-dev (>= 5.6.0~beta+dfsg~),
                qtdeclarative5-private-dev (>= 5.6.0~beta~),
                zlib1g-dev
-Build-Depends-Indep: qtbase5-doc-html (>= 5.5.1+dfsg~),
-                     qtdeclarative5-doc-html (>= 5.5.1~),
-                     qtscript5-doc-html (>= 5.5.1+dfsg~),
-                     qtwebkit5-doc-html (>= 5.5.1+dfsg~),
-                     qtxmlpatterns5-doc-html (>= 5.5.1~)
+Build-Depends-Indep: qtbase5-doc-html (>= 5.5.1+dfsg~)
 Standards-Version: 3.9.6
 Homepage: http://qt-project.org/
 Vcs-Git: git://anonscm.debian.org/pkg-kde/qt/qttools.git
@@ -180,39 +176,6 @@ Description: Qt 5 tools examples debugging symbols
  .
  This package contains the debugging symbols for the Qt 5 tools examples.
 
-Package: qtbase5-doc
-Priority: extra
-Architecture: all
-Section: doc
-Depends: ${misc:Depends}
-Description: Qt 5 base documentation
- Qt is a cross-platform C++ application framework. Qt's primary feature
- is its rich set of widgets that provide standard GUI functionality.
- .
- This package contains the documentation for the Qt 5 base libraries.
-
-Package: qtdeclarative5-doc
-Priority: extra
-Architecture: all
-Section: doc
-Depends: ${misc:Depends}
-Description: Qt 5 declarative documentation
- Qt is a cross-platform C++ application framework. Qt's primary feature
- is its rich set of widgets that provide standard GUI functionality.
- .
- This package contains the documentation for the Qt 5 declarative libraries.
-
-Package: qtscript5-doc
-Priority: extra
-Architecture: all
-Section: doc
-Depends: ${misc:Depends}
-Description: Qt 5 script documentation
- Qt is a cross-platform C++ application framework. Qt's primary feature
- is its rich set of widgets that provide standard GUI functionality.
- .
- This package contains the documentation for the Qt 5 script libraries.
-
 Package: qttools5-doc
 Priority: extra
 Architecture: all
@@ -236,26 +199,3 @@ Description: Qt 5 tools HTML documentation
  .
  This package contains the HTML documentation for the Qt 5 tools
  libraries and binaries.
-
-Package: qtxmlpatterns5-doc
-Priority: extra
-Architecture: all
-Section: doc
-Depends: ${misc:Depends}
-Description: Qt 5 XML patterns documentation
- Qt is a cross-platform C++ application framework. Qt's primary feature
- is its rich set of widgets that provide standard GUI functionality.
- .
- This package contains the documentation for the Qt 5 XML patterns
- libraries.
-
-Package: qtwebkit5-doc
-Priority: extra
-Architecture: all
-Section: doc
-Depends: ${misc:Depends}
-Description: Qt 5 webkit documentation
- Qt is a cross-platform C++ application framework. Qt's primary feature
- is its rich set of widgets that provide standard GUI functionality.
- .
- This package contains the documentation for the Qt 5 webkit libraries.
