@@ -1,13 +1,0 @@
-usr/share/qt5/doc/qdoc.qch
-usr/share/qt5/doc/qmake.qch
-usr/share/qt5/doc/qtconcurrent.qch
-usr/share/qt5/doc/qtcore.qch
-usr/share/qt5/doc/qtdbus.qch
-usr/share/qt5/doc/qtgui.qch
-usr/share/qt5/doc/qtnetwork.qch
-usr/share/qt5/doc/qtopengl.qch
-usr/share/qt5/doc/qtprintsupport.qch
-usr/share/qt5/doc/qtsql.qch
-usr/share/qt5/doc/qttestlib.qch
-usr/share/qt5/doc/qtwidgets.qch
-usr/share/qt5/doc/qtxml.qch
