@@ -1,2 +1,0 @@
-usr/share/qt5/doc/qtqml.qch
-usr/share/qt5/doc/qtquick.qch
