@@ -1,2 +1,0 @@
-usr/share/qt5/doc/qtscript.qch
-usr/share/qt5/doc/qtscripttools.qch
