@@ -1,1 +1,0 @@
-usr/share/qt5/doc/qtxmlpatterns.qch
